--- a/.github/workflow/server-cd.yml
+++ b/.github/workflow/server-cd.yml
@@ -2,7 +2,7 @@ name: Node.js Server CD
 
 on:
   push:
-    branches: [main]
+    branches: [master]
 
 jobs:
   build:
@@ -28,4 +28,4 @@ jobs:
           SSH_HOST: ${{ secrets.GCP_HOST }}
 
       - name: Run Build
-        run: ssh master 'cd ~/kakao-chatbot-TTbot && git checkout main && git pull'
+        run: ssh master 'cd ~/kakao-chatbot-TTbot && git checkout master && sh pull.sh'
